Fix header and hero spacing

--- a/style.css
+++ b/style.css
@@ -68,8 +68,8 @@ img {
 }
 
 .hero img {
-  width: 300px;
-  height: 150px;
+  width: 800px;
+  height: 200px;
 }
 
 .info img {
@@ -101,6 +101,8 @@ header ul {
 
   padding: 0;
   list-style: none;
+
+  gap: 2ch;
 }
 
 /* Hero layout */
@@ -108,6 +110,18 @@ header ul {
 .hero {
   display: flex;
   justify-content: center;
+  align-items: top;
+  
+  padding-block: 8rem;
+  gap: 2ch;
+}
+
+.hero h2 {
+  margin: 0;
+}
+
+.hero p {
+  margin: 0.5rem 0;
 }
 
 /* Info layout */
